--- a/BlazorApp1/Pages/Counter.razor
+++ b/BlazorApp1/Pages/Counter.razor
@@ -2,18 +2,5 @@
 
 <PageTitle>Counter</PageTitle>
 
-<h1>Counter</h1>
-
-<p role="status">Current count: @currentCount</p>
-
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
-
-@code {
-    private int currentCount = 0;
-
-    private void IncrementCount()
-    {
-        currentCount++;
-    }
-
-}
+<h1>Вот ты и дома</h1>
+<img src="true_chack.png"/>
