--- a/BlazorApp1/Shared/MainLayout.razor.css
+++ b/BlazorApp1/Shared/MainLayout.razor.css
@@ -6,10 +6,12 @@
 
 main {
     flex: 1;
+    padding: 0;
+    margin: 0;
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg, #ceb4ac 0%, #3c3c34 70%);
 }
 
 .top-row {
