--- a/BlazorApp1/Pages/Index.razor.css
+++ b/BlazorApp1/Pages/Index.razor.css
@@ -35,9 +35,10 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 50vh;
+    height: 70vh;
     border: 1px solid black;
     overflow: auto;
+    background-image: url("pattern.jpg");
 }
 
 .msg{
@@ -82,8 +83,14 @@
     justify-content: space-between;
 }
 
-.form--send-msg{
-    display: flex;
-    flex-direction: row;
+.form__send-msg{
     margin-top: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+}
+
+.form__send-msg input{
+    display: inline-block;
+    width: calc(100% - 110px);
 }
