--- a/BlazorApp1/Shared/NavMenu.razor.css
+++ b/BlazorApp1/Shared/NavMenu.razor.css
@@ -1,10 +1,11 @@
 .navbar-toggler {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: red;
 }
 
 .top-row {
     height: 3.5rem;
-    background-color: rgba(0,0,0,0.4);
+    background-image: url("chack.png");
+    background-size: 100%;
 }
 
 .navbar-brand {
