--- a/BlazorApp1/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/BlazorApp1/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model ForgotPasswordConfirmation
 @{
-    ViewData["Title"] = "Forgot password confirmation";
+    ViewData["Title"] = "Подтверждение забытого пароля";
 }
 
 <h1>@ViewData["Title"]</h1>
 <p>
-    Please check your email to reset your password.
+    Напишите нам на почту example@some.com и опишите вашу ситуацию. Мы постараемся вам помочь.
 </p>
