--- a/BlazorApp1/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/BlazorApp1/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model PersonalDataModel
 @{
-    ViewData["Title"] = "Personal Data";
+    ViewData["Title"] = "Удаление данных";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
@@ -10,10 +10,10 @@
 <div class="row">
     <div class="col-md-6">
         <p>
-            <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
+            <strong>Удаление ваших данных приведёт к немедленному удалению аккаунта.</strong>
         </p>
         <p>
-            <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Delete</a>
+            <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Удалить данные</a>
         </p>
     </div>
 </div>
