--- a/BlazorApp1/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BlazorApp1/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,4 +1,6 @@
 ﻿@page
+@using Chat.Services
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model RegisterModel
 @{
     ViewData["Title"] = "Регистрация";
@@ -36,7 +38,3 @@
         </form>
     </div>
 </div>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
