--- a/BlazorApp1/Pages/Counter.razor
+++ b/BlazorApp1/Pages/Counter.razor
@@ -2,5 +2,6 @@
 
 <PageTitle>Counter</PageTitle>
 
-<h1>Вот ты и дома</h1>
-<img src="true_chack.png"/>
+<h1 class="greetings">Добро пожаловать, странник!</h1>
+<p class="rules">На этом сайте ты сможешь пообщаться с лучшими представителями нашего вида, рассказать о своих славных подвигах, услышать истории других людей и просто славно провести время.</p>
+<p class="rules">Это место зиждется на честности и доверии друг к другу, так же как и весь наш мир. Поэтому если слова Совесть и Честь - твои спутники по жизни, то ты оказался в правильном месте.</p>
