--- a/BlazorApp1/Shared/MainLayout.razor
+++ b/BlazorApp1/Shared/MainLayout.razor
@@ -2,6 +2,10 @@
 
 <PageTitle>BlazorApp1</PageTitle>
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mr+Dafoe&display=swap" rel="stylesheet">
+
 <div class="page">
     <AuthorizeView>
         <Authorized>
@@ -12,7 +16,7 @@
     </AuthorizeView>
 
     <main>
-        <div class="top-row px-4 auth">
+        <div class="top-row px-4 auth header">
             <LoginDisplay/>
         </div>
 
