--- a/BlazorApp1/Pages/Index.razor.css
+++ b/BlazorApp1/Pages/Index.razor.css
@@ -3,8 +3,9 @@
     flex-direction: column;
     width: 50%;
     min-width: 400px;
-    border: 1px dashed #0a58ca;
+    border: 1px dashed #468ACE;
     padding: 10px;
+    margin-bottom: 20px;
 }
 
 .form__container input{
@@ -32,20 +33,26 @@
 
 /*msg*/
 .chat-container{
+    padding: 10px;
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 70vh;
     border: 1px solid black;
     overflow: auto;
-    background-image: url("pattern.jpg");
+    background-color: #2C3845;
 }
 
 .msg{
     padding: 8px;
-    border-radius: 10px;
-    background-color: #33393F;
+    border-radius: 6px;
+    background-color: #5D7791;
     color: white;
+}
+
+.msg__username{
+    color: #FE8427;
+    font-weight: bold;
 }
 
 .receive{
@@ -80,7 +87,9 @@
 .forms{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    gap: 20px;
+    justify-content: space-around;
+    margin-left: 10px;
 }
 
 .form__send-msg{
@@ -92,5 +101,29 @@
 
 .form__send-msg input{
     display: inline-block;
-    width: calc(100% - 110px);
+    width: calc(100% - 120px);
+}
+
+.hidden{
+    display: none;
+}
+
+.btn__standart{
+    background-color: #468ACE;
+    color: white;
+    border-radius: 6px;
+    padding: 7px 10px;
+}
+
+.btn__settings{
+    border-radius: 6px 6px 0 0;
+    position: fixed;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 0;
+}
+
+.settings {
+    margin-top: 25px;
+    margin-left: 25px;
 }
