--- a/BlazorApp1/Pages/Shared/_Layout.cshtml
+++ b/BlazorApp1/Pages/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" href="~/">Chuck Chat</a>
+                <a class="navbar-brand" href="~/">BlazorApp1</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -50,13 +50,14 @@
     </header>
 
     <div class="container">
+        <partial name="_CookieConsentPartial" optional />
         <main role="main" class="pb-1">
             @RenderBody()
         </main>
     </div>
     <footer class="footer border-top pl-3 text-muted">
         <div class="container">
-        &copy; 2023 - Chuck Chat
+        &copy; 2023 - BlazorApp1
             @{
                 var foundPrivacy = Url.Page("/Privacy", new { area = "" });
             }
