--- a/BlazorApp1/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/BlazorApp1/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Подтверждение забытого пароля";
 }
 
-<h1>@ViewData["Title"]</h1>
-<p>
+<h1 style="color: #7EA1C4">@ViewData["Title"]</h1>
+<p style="color: #7EA1C4">
     Напишите нам на почту example@some.com и опишите вашу ситуацию. Мы постараемся вам помочь.
 </p>
