--- a/BlazorApp1/Areas/Identity/Pages/Account/Login.cshtml
+++ b/BlazorApp1/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,9 +5,9 @@
     ViewData["Title"] = "Вход";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1 style="color: #7EA1C4">@ViewData["Title"]</h1>
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4" style="color: #7EA1C4">
         <section>
             <form id="account" method="post">
                 <hr />
