--- a/BlazorApp1/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/BlazorApp1/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -9,9 +9,9 @@
     }
 }
 
-<h1>Управление аккаунтом</h1>
+<h1 style="color: #7EA1C4">Управление аккаунтом</h1>
 
-<div>
+<div style="color: #7EA1C4">
     <h2>Изменение настроек аккаунта</h2>
     <hr />
     <div class="row">
