--- a/BlazorApp1/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BlazorApp1/Areas/Identity/Pages/Account/Register.cshtml
@@ -6,10 +6,10 @@
     ViewData["Title"] = "Регистрация";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1 style="color: #7EA1C4">@ViewData["Title"]</h1>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4" style="color: #7EA1C4">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h2>Создать новый аккаунт</h2>
             <hr />
