--- a/BlazorApp1/Pages/Index.razor.css
+++ b/BlazorApp1/Pages/Index.razor.css
@@ -101,7 +101,8 @@
 
 .form__send-msg input{
     display: inline-block;
-    width: calc(100% - 120px);
+    width: calc(100% - 150px);
+    margin: 10px;
 }
 
 .hidden{
