--- a/BlazorApp1/Shared/MainLayout.razor
+++ b/BlazorApp1/Shared/MainLayout.razor
@@ -25,7 +25,10 @@
                 @Body
             </Authorized>
             <NotAuthorized>
-                
+                <div>
+                    <h1>Хей амиго, заведи, наконец, аккаунт в этом уютном местечке!</h1>
+                    <img src="mem.png" alt=""/>
+                </div>
             </NotAuthorized>
         </AuthorizeView>
     </main>
