--- a/BlazorApp1/Pages/Counter.razor.css
+++ b/BlazorApp1/Pages/Counter.razor.css
@@ -5,5 +5,9 @@
 
 .rules{
     width: 60vw;
+    font-size: 25px;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    vertical-align: center;
 }
