--- a/BlazorApp1/Shared/LoginDisplay.razor
+++ b/BlazorApp1/Shared/LoginDisplay.razor
@@ -2,7 +2,7 @@
     <Authorized>
         <a href="Identity/Account/Manage">Личный кабинет @context.User.Identity?.Name</a>
         <form method="post" action="Identity/Account/Logout">
-            <button type="submit" class="nav-link btn btn-link">Выйти и зайти нормально</button>
+            <button type="submit" class="nav-link btn__standart">Выйти и зайти нормально</button>
         </form>
     </Authorized>
     <NotAuthorized>
