--- a/BlazorApp1/Shared/NavMenu.razor.css
+++ b/BlazorApp1/Shared/NavMenu.razor.css
@@ -15,6 +15,7 @@
     color: rgba(254, 132, 39, 1);
     text-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
     line-height: 56px;
+    margin-top: -15px;
 }
 
 .chat__add{
@@ -73,6 +74,7 @@
 
 @media (min-width: 641px) {
     .form-control{
+        margin-left: 5px;
         width: 180px;
     }
 }
