--- a/BlazorApp1/Pages/Counter.razor
+++ b/BlazorApp1/Pages/Counter.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 
-<PageTitle>Counter</PageTitle>
+<PageTitle>Home</PageTitle>
 
 <h1 class="greetings">Добро пожаловать, странник!</h1>
 <p class="rules">На этом сайте ты сможешь пообщаться с лучшими представителями нашего вида, рассказать о своих славных подвигах, услышать истории других людей и просто славно провести время.</p>
