--- a/BlazorApp1/Pages/Index.razor.css
+++ b/BlazorApp1/Pages/Index.razor.css
@@ -41,6 +41,8 @@
     border: 1px solid black;
     overflow: auto;
     background-color: #2C3845;
+    position: relative;
+    overflow-y: scroll;
 }
 
 .msg{
@@ -48,6 +50,8 @@
     border-radius: 6px;
     background-color: #5D7791;
     color: white;
+    max-width: 100%;
+    word-wrap: break-word;
 }
 
 .msg__username{
@@ -132,26 +136,56 @@
 }
 
 .chat-container-paddings{
-    min-width: 500px;
+    width: 500px;
     margin-left: auto;
     margin-right: auto;
     display: flex;
     flex-direction: column;
+    padding: 5px;
+    min-height: 100%;
+    height: 100vmax;
 }
 
 @media (max-width: 1200px) {
     .chat-container-paddings{
-        min-width: 450px;
+        width: 450px;
     }
 }
 
 @media (max-width: 550px) {
     .chat-container-paddings{
-        min-width: 100%;
+        width: 100%;
     }
     
     .send{
         align-self: flex-start;
         border-radius: 0 6px 6px 6px;
     }
+}
+
+.chat-container-border{
+    position: absolute;
+    top: 1px;
+    left: calc(50% - 5px);
+    transform: translateX(-50%);
+    width: 505px;
+    border-right: 2px dashed #468ACE;
+    border-left: 2px dashed #468ACE;
+    height: calc(100% - 2px);
+    pointer-events: none;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-button {
+    display: none;
+    background: #efefef
+}
+::-webkit-scrollbar-track-piece {
+    background: #888
+}
+::-webkit-scrollbar-thumb {
+    background: #efefef
 }
