--- a/BlazorApp1/Pages/Shared/_LoginPartial.cshtml
+++ b/BlazorApp1/Pages/Shared/_LoginPartial.cshtml
@@ -19,10 +19,16 @@
 else
 {
     <li class="nav-item">
-        <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Зарегистрироваться</a>
+        <a style="text-decoration: none;
+                  color: #FE8427;
+                  font-size: 16px;
+                  margin-right: 15px;" class="nav-link" id="register" asp-area="Identity" asp-page="/Account/Register">Зарегистрироваться</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Войти</a>
+        <a style="text-decoration: none;
+                  color: #FE8427;
+                  font-size: 16px;
+                  margin-right: 15px;" class="nav-link" id="login" asp-area="Identity" asp-page="/Account/Login">Войти</a>
     </li>
 }
 </ul>
